--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 requests==2.32.5
+pyzipper==0.3.6
 python-dateutil==2.9.0.post0
+scikit-learn==1.7.2
 torch==2.8.0
 transformers[torch]==4.56.2
 PyYAML==6.0.3
